--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
-  "name": "capitune",
+  "name": "capitune-server",
   "version": "1.0.0",
-  "description": "Réseau social de spiritualité - Un espace sobre et épuré",
+  "description": "Backend API pour Capitune",
+  "main": "src/server.js",
+  "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run dev:server\" \"npm run dev:client\"",
-    "dev:server": "cd server && npm run dev",
-    "dev:client": "cd client && npm run dev",
-    "install:all": "npm install && cd server && npm install && cd ../client && npm install"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
-  "keywords": ["spiritualité", "réseau social", "méditation", "mindfulness"],
-  "author": "",
-  "license": "MIT",
+  "dependencies": {
+    "axios": "^1.13.2",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-validator": "^7.0.1",
+    "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.3",
+    "multer": "^1.4.5-lts.1"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "mongodb-memory-server": "^11.0.1",
+    "nodemon": "^3.0.2"
   }
 }
