fix: set API host to railway backend

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,7 +1,7 @@
 # Variables d'environnement pour la production Firebase
 
 # API Backend (Cloud Functions)
-VITE_API_HOST=https://capiatune.web.app/api
+VITE_API_HOST=https://capitune-api.up.railway.app/api
 
 # Firebase Configuration
 VITE_FIREBASE_API_KEY=AIzaSyDrY1xeqbiJTUprDLQFxQI1f03utq4j3M8
